# DiscordBot

./: .dockerignore  .gitignore  pyproject.toml
services/media_manager/: factory.py  main.py  worker.py
services/media_manager/core/: entities.py  exceptions.py  settings.py
services/media_manager/modules/: base.py  youtube.py
services/media_manager/msg_broker/: base.py  redis.py
services/media_manager/state_client/: base.py  redis.py
services/media_manager/state_manager/: manager.py
tests/media_fetcher/: test_youtube_fetcher.py
